name:                   test
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               Test suite for continued-fractions project
description:            Test suite for continued-fractions project

Executable continued-fractions-test
  ghc-options:          -threaded
  hs-source-dirs:       src
  main-is:              Tests.hs
  build-depends:        base >= 3 && < 5,
                        containers,
                        continued-fractions,
                        test-framework,
                        test-framework-quickcheck2,
                        QuickCheck >= 2
